@@ -56,7 +56,8 @@ namespace lsp
                 enum sc_source_t
                 {
                     SCT_INTERNAL,
-                    SCT_EXTERNAL
+                    SCT_EXTERNAL,
+                    SCT_LINK,
                 };
 
                 enum sc_graph_t
@@ -108,8 +109,8 @@ namespace lsp
                     float                  *vEnv;               // Envelope data
                     float                  *vGain;              // Gain reduction data
                     bool                    bScListen;          // Listen sidechain
-                    size_t                  nSync;              // Synchronization flags
-                    size_t                  nScType;            // Sidechain mode
+                    uint32_t                nSync;              // Synchronization flags
+                    uint32_t                nScType;            // Sidechain mode
                     float                   fMakeup;            // Makeup gain
                     float                   fDryGain;           // Dry gain
                     float                   fWetGain;           // Wet gain
@@ -119,6 +120,7 @@ namespace lsp
                     plug::IPort            *pIn;                // Input port
                     plug::IPort            *pOut;               // Output port
                     plug::IPort            *pSC;                // Sidechain port
+                    plug::IPort            *pShmIn;             // Shared memory link input port
 
                     plug::IPort            *pGraph[G_TOTAL];    // History graphs
                     plug::IPort            *pMeter[M_TOTAL];    // Meters
@@ -158,6 +160,7 @@ namespace lsp
                 channel_t              *vChannels;      // Gate channels
                 float                  *vCurve;         // Gate curve
                 float                  *vTime;          // Time points buffer
+                float                  *vEmptyBuffer;   // Empty buffer
                 bool                    bPause;         // Pause button
                 bool                    bClear;         // Clear button
                 bool                    bMSListen;      // Mid/Side listen
@@ -179,9 +182,12 @@ namespace lsp
 
             protected:
                 static dspu::sidechain_source_t     decode_sidechain_source(int source, bool split, size_t channel);
+                static inline bool                  use_sidechain(const channel_t & c);
+                static inline float                *select_buffer(const channel_t & c, float *in, float *sc, float *shm);
 
             protected:
                 void                do_destroy();
+                uint32_t            decode_sidechain_type(uint32_t sc) const;
 
             public:
                 gate(const meta::plugin_t *metadata, bool sc, size_t mode);
