@@ -87,6 +87,7 @@
 					<button id="pause" height="22" width="48" text="labels.pause" pad.v="4" ui:inject="Button_green"/>
 					<button id="clear" height="22" width="48" text="labels.clear" pad.v="4" ui:inject="Button_red"/>
 					<void hexpand="true" />
+					<shmlink id="link" />
 				</hbox>
 			</vbox>
 
@@ -285,7 +286,7 @@
 					<cell rows="3">
 						<vbox fill="false" spacing="1" pad.t="4">
 							<ui:with pad.h="6" pad.b="4" hfill="true">
-								<combo id="sci_l" visibility="ex :sci_l" />
+								<combo id="sci_l" />
 								<combo id="scm_l" />
 								<combo id="scs_l" />
 								<button id="scl_l" height="22" text="labels.listen" ui:inject="Button_left"/>
@@ -321,7 +322,7 @@
 					<cell rows="3">
 						<vbox fill="false" spacing="1" pad.t="4">
 							<ui:with pad.h="6" pad.b="4" hfill="true" >
-								<combo id="sci_r" visibility="ex :sci_r" />
+								<combo id="sci_r" />
 								<combo id="scm_r" />
 								<combo id="scs_r" />
 								<button id="scl_r" height="22" text="labels.listen" ui:inject="Button_right"/>
