@@ -83,6 +83,7 @@
 					<button id="pause" height="22" width="48" text="labels.pause" pad.v="4" ui:inject="Button_green"/>
 					<button id="clear" height="22" width="48" text="labels.clear" pad.v="4" ui:inject="Button_red"/>
 					<void hexpand="true" />
+					<shmlink id="link" />
 					<vsep pad.h="2" bg.color="bg" reduce="true" />
 					<button id="ssplit" text="labels.stereo_split" size="22" pad.v="4" ui:inject="Button_blue"/>
 				</hbox>
@@ -279,7 +280,7 @@
 						<vbox>
 							<vbox vfill="false" pad.v="4">
 								<ui:with pad.h="6" hfill="true" width.min="74" >
-									<combo id="sci" pad.b="4" visibility="ex :sci" />
+									<combo id="sci" pad.b="4" />
 									<combo id="scm" pad.b="4"/>
 									<combo id="scs" visibility="!:ssplit" />
 									<combo id="sscs" visibility=":ssplit" />
