@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.25 ===
+* Added support of sidechain passed by shared memory link.
 * Updated build scripts and dependencies.
 
 === 1.0.24 ===
